--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom, #000000, #cfcfcf);
+  background: #000000;
 
   /* background: linear-gradient(
       to bottom,
